# llm-kb-bench

./: .gitignore  AGENTS.md  CLAUDE.md  METHODOLOGY.md  README.md  pyproject.toml
benchmarks/: __main__.py  harness.py  judge.py  judge_prompt.md  models.py  qa_set.yaml
corpus/: README.md  __main__.py  download.py  manifest.yaml
results/2026-04-10/: graphify.json  naive-rag.json  summary.json  summary.md
results/2026-04-10/wiki/graphify/: graph.html  graph.json
results/2026-04-10/wiki/naive-rag/: metadata.json
results/test-run/wiki/graphify/: graph.html
scripts/: __main__.py  generate_report.py  run_all.sh
tests/: test_corpus.py  test_harness.py  test_integration.py  test_judge.py  test_models.py  test_tool_wrapper.py
tools/: base.py
tools/claude_memory_compiler/: wrapper.py
tools/graphify/: wrapper.py
tools/naive_rag/: wrapper.py
