[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-kb-bench"
version = "0.1.0"
description = "Reproducible benchmark of LLM knowledge base tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jothiswaran Arumugam"}
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "anthropic>=0.40",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
llm-kb-bench = "benchmarks.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
